2016-06-18 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/mcs51/gen.c
	  Fix a bug in jump table of switch/case when --acall-ajmp is specified.
	* src/mcs51/peeph.def
	  Remove empty lines.

2016-06-18 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/ports/mcs51-huge/spec.mk
	* support/regression/ports/mcs51-xstack-auto/spec.mk
	  Make "make" more compatible.

2016-06-17 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/ports/ucr2k/support.asm:
	  Fix regression test putchar() for r2k.

2016-06-16 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdio.h,
	  device/lib/ds390/putchar.c,
	  device/lib/puts.c,
	  support/regression/tests/bug1115321.c,
	  support/regression/tests/dhrystone.c:
	  Make putchar() prototype standard-compliant, fix bug #2505.

2016-06-16 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/*/Makefile.in,
	  device/lib/*/putchar.s,
	  support/regression/ports/*/support.asm,
	  support/regression/tests/dhrystone.c:
	  Remove z80 putchar() from library.

2016-06-15 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/dhrystone.c:
	  Introduce a regression test based on the Dhrystone benchmark.

2016-06-13 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/stm8/gen.c
	  Fix a bug in emitCall().

2016-06-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* Small Device C Compiler 3.6.0 released
	* .version, doc/sdccman.lyx: changed sdcc version to 3.6.1

2016-06-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* .version,
	* doc/INSTALL.txt,
	* doc/sdccman.lyx:  version 3.6.0

2016-06-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/gen.c:
	  Work around an allocation issue.

2016-05-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* .version,
	* doc/INSTALL.txt,
	* doc/sdccman.lyx: version 3.6.0 rc1, use coloured links
	* sdcc.spec: version 3.6.0
	* doc/Makefile.in: silence makeindex
	* sim/ucsim/cmd.src/cmdset.cc,
	* sim/ucsim/hc08.src/hc08cl.h,
	* sim/ucsim/sim.src/hw.cc,