@@ -1,3 +1,11 @@
+2016-06-19 Philipp Klaus Krause <pkk AT spth.de>
+
+	* doc/sdccman.lyx,
+	  src/SDCCglobl.h,
+	  src/SDCCmain.c,
+	  src/SDCCsymt.c:
+	  Remove obsolete SDCC macro, --short-is-8-bits option.
+
 2016-06-18 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* src/mcs51/gen.c
